fix: typo and better documentation